--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,9 +5,9 @@
 $base-font-size: 16px !default;
 $small-font-size:  0.875rem !default;
 $bold-font-weight: bold !default;
-$font-family: Helvetica, Arial, sans-serif !default;
+$font-family: 'Vollkorn', Arial, serif !default;
 $line-height: 1.5 !default;
-$heading-font-family: Helvetica, sans-serif !default;
+$heading-font-family: 'Vollkorn', serif !default;
 $heading-font-weight: 900 !default;
 $heading-line-height: 1.25 !default;
 $monospace-font-family: 'Source Code Pro', Consolas, monospace !default;
@@ -15,7 +15,7 @@ $h1: 2.998rem !default;
 $h2: 1.5rem !default;
 $h3: 1.25rem !default;
 $h4: 1rem !default;
-$h5: .875rem !default;
+$h5: 1.2rem !default;
 $h6: .75rem !default;
 $h00: 4rem !default;
 $h0: 3rem !default;
@@ -70,10 +70,10 @@ $darken-2:          rgba(#000,.125) !default;
 $darken-3:          rgba(#000,.25) !default;
 $darken-4:          rgba(#000,.5) !default;
 
-$theme-color:       $purple;
+$theme-color:       #CE534D;
 $code-color:        $dark-gray;
 $text-color:        $mid-gray;
-$background-color:  white;
+$background-color:  #F1EED9;
 
 // Links
 $link-color:        $theme-color;
