--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -1,6 +1,6 @@
 .site-header {
     border-bottom: 1px solid #D2CCA1;
-    background-color: #F1EED9;
+    background-color: #FFFFFF;
     opacity: 0.95;
     position:fixed;
     left:calc((100vw - 100%)/2);
