--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -73,7 +73,7 @@ $darken-4:          rgba(#000,.5) !default;
 $theme-color:       #CE534D;
 $code-color:        $dark-gray;
 $text-color:        $mid-gray;
-$background-color:  #F1EED9;
+$background-color:  #FFFFFF;
 
 // Links
 $link-color:        $theme-color;
