--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,7 +8,7 @@ html, body {
   height: auto;
   min-height: 100%;
   -webkit-text-size-adjust: 100%;
-  background-color: #F1EED9;
+  background-color: #FFFFFF;
 }
 
 img {
